--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.thymeleaf.suffix=.html
 spring.datasource.url=jdbc:mysql://localhost/portal_tech?createDatabaseIfNotExist=true&serverTimezone=UTC&useSSl=false
 spring.datasource.username=root
 
-spring.datasource.password=
+spring.datasource.password=1234
 
 spring.jpa.defer-datasource-initialization=true
 spring.datasource.data=classpath:data.sql
