create controllers front

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.url=jdbc:mysql://localhost/portal_tech?createDatabaseIfNotExis
 spring.datasource.username=root
 
 
-spring.datasource.password=
+spring.datasource.password=1234
 
 
 spring.jpa.defer-datasource-initialization=true
