--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.datasource.username=root
 
 
 
-spring.datasource.password=****
+spring.datasource.password=32822441
 
 
 spring.jpa.defer-datasource-initialization=true
