--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,8 @@ spring.datasource.username=root
 
 
 
-spring.datasource.password=****
+spring.datasource.password=Yansinh@09
+
 
 spring.jpa.defer-datasource-initialization=true
 spring.datasource.data=classpath:data.sql
