--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,13 @@
 			<version>2.5.0</version>
 		</dependency>
 
+
+			<dependency>
+				<groupId>com.sun.mail</groupId>
+				<artifactId>javax.mail</artifactId>
+				<version>1.6.2</version>
+			</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
